TEST_PROGRAMS/VALID/07/valid_goLiteArrayIndexing.go
package main

func main() {
	y[x+y[0]-z[8]] = 1000
}
